--- a/package.json
+++ b/package.json
@@ -7,14 +7,23 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test": "vite-jest --watch"
   },
   "dependencies": {
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "vite-jest": "0.0.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "babel-jest": "^27.0.6",
+    "jest": "^27.0.6",
     "vite": "^2.4.4"
+  },
+  "jest": {
+    "verbose": true
   }
 }
